--- a/README
+++ b/README
@@ -46,6 +46,15 @@ be aggregated, filtered, sorted, analyzed, massaged, and searched. In previous
 releases you had to include HoptoadNotifier::Catcher into your
 ApplicationController, but the plugin takes care of that now.
 
+** NOTE for use with suburi install of Redmine **
+use 
+config.suburi = 'appname' 
+where appname is the suburi in the following examples
+http://foo.bar.com/redmine
+http://foo.bar.com/redmine/one
+
+redmine and redmine/one respectively 
+
 ** NOTE FOR RAILS 1.2.* USERS: **
 You will need to copy the hoptoad_notifier_tasks.rake file into your
 RAILS_ROOT/lib/tasks directory in order for the following to work:
